Replace Optional with Nullable in PersistentEntities.